--- a/sad_ui/templates/app/list.html
+++ b/sad_ui/templates/app/list.html
@@ -11,9 +11,9 @@
 {% block content %}
 {% for search_key in search_keys %}
 <div class="d-flex align-items-center">
-<h3>{{ search_key | replace("_"," ") | title }}</h3>
+    <h3>{{ search_key | replace("_"," ") | title }}</h3>
     <a href="#" onclick="requestSearch('{{ search_key }}')" style="margin-left: 20px;"><i
-                class="fa-solid fa-recycle"></i></a>
+            class="fa-solid fa-recycle"></i></a>
 </div>
 <table class="table table-striped">
     <thead>
@@ -21,23 +21,35 @@
         <th scope="col"></th>
         <th scope="col">Title</th>
         <th scope="col">Description</th>
-        <th scope="col">TMDB User Rating</th>
         <th scope="col">Rotten Tomatoes User Rating</th>
         <th scope="col">Size (GB)</th>
+        <th scope="col">Delete</th>
     </tr>
     </thead>
     <tbody>
     {% set result = search_results[search_key] %}
     {% for movie in result %}
-    <tr>
-        <th scope="row"><img
-                src="{{ tmdb_config.images.base_url }}{{ tmdb_config.images.poster_sizes[0] }}{{ movie.tmdb_results.poster_path }}"/>
+    <tr id="{{ movie.id }}">
+        <th scope="row"><a href="#" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-html="true" data-bs-title="
+{% for actor in movie.roles %}
+{{ actor }}<br/>
+{% endfor %}
+"> <img
+                src="{{ tmdb_config.images.base_url }}{{ tmdb_config.images.poster_sizes[0] }}{{ movie.tmdb_results.poster_path }}"/></a>
         </th>
         <td>{{ movie.tmdb_results.title }} ({{ movie.tmdb_results.release_date.split('-')[0] }})</td>
         <td>{{ movie.tmdb_results.overview }}</td>
-        <td>{{ movie.tmdb_results.vote_average | round(1) }}</td>
-        <td>{{ (movie.audience_rating | float * 10) | round | int }}% {% if (movie.audience_rating | float) >= 7 %}<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Rotten_Tomatoes_positive_audience.svg/15px-Rotten_Tomatoes_positive_audience.svg.png"/>{% else %}<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Rotten_Tomatoes_negative_audience.svg/15px-Rotten_Tomatoes_negative_audience.svg.png"/>{% endif %}</td>
+        <td>{{ (movie.audience_rating | float * 10) | round | int }}% {% if (movie.audience_rating | float) >= 7 %}<img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Rotten_Tomatoes_positive_audience.svg/15px-Rotten_Tomatoes_positive_audience.svg.png"/>{%
+            else %}<img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Rotten_Tomatoes_negative_audience.svg/15px-Rotten_Tomatoes_negative_audience.svg.png"/>{%
+            endif %}
+        </td>
         <td>{{ (movie.size_bytes / 1024 / 1024 / 1024) | round(1) }}</td>
+        <td>
+            <a href="#" onclick="handleDeleteClick(event, {{ movie.id }})"><i
+                    class="fa-regular fa-trash-can"></i></a>
+        </td>
     </tr>
     {% endfor %}
     </tbody>
@@ -46,23 +58,54 @@
 {% endblock %}
 {% block footer_content %}
 <script>
-function makeHttpObject()
-{
-    try {return new XMLHttpRequest();}
-    catch (error) {}
-    try {return new ActiveXObject("Msxml2.XMLHTTP");}
-    catch (error) {}
-    try {return new ActiveXObject("Microsoft.XMLHTTP");}
-    catch (error) {}
-    throw new Error("Could not create HTTP request object.");
-}
+    function makeHttpObject() {
+        try {
+            return new XMLHttpRequest();
+        } catch (error) {
+        }
+        try {
+            return new ActiveXObject("Msxml2.XMLHTTP");
+        } catch (error) {
+        }
+        try {
+            return new ActiveXObject("Microsoft.XMLHTTP");
+        } catch (error) {
+        }
+        throw new Error("Could not create HTTP request object.");
+    }
 
-function requestSearch(search_key)
-{
-    var request = makeHttpObject();
-    request.open("GET", "{{ url_for('app.request_search') }}?search_key=" + encodeURIComponent(search_key), true);
-    request.send(null);
-}
+    function requestSearch(search_key) {
+        var request = makeHttpObject();
+        request.open("GET", "{{ url_for('app.request_search') }}?search_key=" + encodeURIComponent(search_key), true);
+        request.send(null);
+    }
 
+    function handleDeleteClick(event, delete_key) {
+        event.preventDefault(); // Prevent the default behavior (e.g., navigating to # or reloading the page)
+        requestDelete(delete_key);
+    }
+
+    function requestDelete(delete_key) {
+        var request = makeHttpObject();
+        request.open("GET", "/request_delete?delete_key=" + delete_key, true);
+
+        // Set up the event handler for when the state of the request changes
+        request.onreadystatechange = function () {
+            // Check if the request is complete and the status code is 200 (OK)
+            if (request.readyState == 4 && request.status == 200) {
+                // Remove the table row with the specified ID
+                var rowToRemove = document.getElementById(delete_key);
+                if (rowToRemove) {
+                    rowToRemove.parentNode.removeChild(rowToRemove);
+                }
+            }
+        };
+
+        // Send the request
+        request.send(null);
+    }
+
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 </script>
 {% endblock %}
