--- a/sad_ui/templates/base.html
+++ b/sad_ui/templates/base.html
@@ -29,7 +29,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="{{ url_for('app.index') }}">Movie List</a>
+                <a class="nav-link" href="{{ url_for('app.movies') }}">Movie List</a>
+                <a class="nav-link" href="{{ url_for('app.shows') }}">Show List</a>
             </div>
         </div>
     </div>
